--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
 		"gatsby-plugin-sitemap": "^2.0.3",
 		"gatsby-plugin-styled-components": "^3.0.4",
 		"gatsby-source-filesystem": "^2.1.35",
-		"gatsby-source-graphql": "^2.1.27",
+		"gatsby-source-graphql": "2.1.27",
 		"gatsby-transformer-sharp": "^2.2.7",
 		"prop-types": "^15.6.2",
 		"react": "^16.11.0",
@@ -31,11 +31,7 @@
 		"styled-components": "^4.1.3",
 		"yup": "^0.26.6"
 	},
-	"keywords": [
-		"gatsby",
-		"portfolio",
-		"developer"
-	],
+	"keywords": [ "gatsby", "portfolio", "developer" ],
 	"license": "MIT",
 	"scripts": {
 		"build": "gatsby build",
